@@ -11,6 +11,7 @@
 - Add pause animation
 - Add short animation to autoclean earmarks
 - Cap grid margins at 25
+- Fix a few control shortcuts not working on some setups (#116)
 - Fix trapped focus during pause
 
 48.0 - March 14, 2025
